--- a/proyfereteria.vcxproj.filters
+++ b/proyfereteria.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="MyForm.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="conexion.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
